fixed hide native checkbox on safari

--- a/ballot.css
+++ b/ballot.css
@@ -56,8 +56,10 @@ h1:focus, h2:focus, h3:focus, #inputsWrap_AffidavitPage input:focus {
     cursor: pointer;
     top: 10px;
     right: 10px;
-    appearance: none;
     outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;    
  }
  
  .c2::after{
